--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
+<%= yield(:title, "") %>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsBasic</title>
+    <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,3 +14,4 @@
     <%= yield %>
   </body>
 </html>
+
