--- a/app/views/simple_pages/help.html.erb
+++ b/app/views/simple_pages/help.html.erb
@@ -1,3 +1,4 @@
+<%= provide :title, t("help") %>
 <h2><%= t ".title" %></h2>
 <%= link_to t("en"), locale: :en %>
 <%= link_to t("vi"), locale: :vi %>
