--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,14 @@
 
   <body>
     <%= render "layouts/header" %>
-    <div class="containter">
+    <div class="container">
+      <div class="row center">
+        <% flash.each do |msg_type, msg| %>
+          <div class="alert alert-<%= msg_type %>"><%= msg %></div>
+        <% end %>
+      </div>
       <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
