--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,22 @@
         <li><%= link_to t("vi"), locale: :vi %></li>
         <li><%= link_to t("home"), home_path %></li>
         <li><%= link_to t("help"), help_path %></li>
-        <li><%= link_to t("log_in"), "#" %></li>
+        <% if logged_in %>
+          <li class="dropdown">
+            <%= link_to current_user.name, user_path(current_user.id), class: "dropdown-toggle",
+                "data-toggle": "dropdown" %>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("profile"), user_path(current_user.id) %></li>
+              <li><%= link_to t("setting"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("auths.logout"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("log_in"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
