--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,10 +9,10 @@
         <li><%= link_to t("help"), help_path %></li>
         <% if logged_in %>
           <li class="dropdown">
-            <%= link_to current_user.name, user_path(current_user.id), class: "dropdown-toggle",
+            <%= link_to current_user.name, user_path(current_user), class: "dropdown-toggle",
                 "data-toggle": "dropdown" %>
             <ul class="dropdown-menu">
-              <li><%= link_to t("profile"), user_path(current_user.id) %></li>
+              <li><%= link_to t("profile"), user_path(current_user) %></li>
               <li><%= link_to t("setting"), "#" %></li>
               <li class="divider"></li>
               <li>
