--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,12 +8,13 @@
         <li><%= link_to t("home"), home_path %></li>
         <li><%= link_to t("help"), help_path %></li>
         <% if logged_in %>
+          <li><%= link_to t("users.index.title"), users_path %></li>
           <li class="dropdown">
             <%= link_to current_user.name, user_path(current_user), class: "dropdown-toggle",
                 "data-toggle": "dropdown" %>
             <ul class="dropdown-menu">
               <li><%= link_to t("profile"), user_path(current_user) %></li>
-              <li><%= link_to t("setting"), "#" %></li>
+              <li><%= link_to t("setting"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("auths.logout"), logout_path, method: :delete %>
