--- a/app/views/auths/new.html.erb
+++ b/app/views/auths/new.html.erb
@@ -6,6 +6,7 @@
       <%= f.label :email %>
       <%= f.email_field :email, class: "form-control" %>
       <%= f.label :password, t("users.new.password") %>
+      <%= link_to t("auths.forget_password.forget_password"), new_password_reset_path %>
       <%= f.password_field :password, class: "form-control" %>
       <%= f.label :remember, class: "checkbox-inline" do %>
         <%= f.check_box :remember %>
