Chapter 13 - User microposts

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,4 +32,4 @@
   <% end %>
   </tbody>
 </table>
-<%= paginate @user, theme: 'twitter-bootstrap-3' %>
+<%= paginate @user, theme: "twitter-bootstrap-3" %>
