--- a/app/views/simple_pages/home.html.erb
+++ b/app/views/simple_pages/home.html.erb
@@ -1,8 +1,28 @@
 <%= provide :title, t("home") %>
+<% unless logged_in %>
 <div class="center jumbotron">
   <h1><%= t ".welcome" %></h1>
   <h2>
     <%= link_to t("base_title"), "https://www.railstutorial.org/" %>
   </h2>
-  <%= link_to t("sign_up"), "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to t("sign_up"), signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+<% end %>
+<% if logged_in %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render "shared/user_info" %>
+      </section>
+      <section class="micropost_form">
+        <%= render "shared/micro_post_form" %>
+      </section>
+    </aside>
+    <div class="col-md-1"></div>
+    <div class="col-md-7">
+      <div class="microposts">
+        <%= render "shared/feed" %>
+      </div>
+    </div>
+  </div>
+<% end %>
