--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @user, url: user_form_path do |f| %>
-  <%= render "shared/error", object: @user %>
+  <%= render "shared/error", object: f.object %>
   <%= f.label :name, t("users.new.name") %>
   <%= f.text_field :name, class: "form-control" %>
   <%= f.label :email, "Email" %>
