--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,20 @@
 <%= provide :title, @user.name %>
 <div class="row center">
-    <aside class="col-md-4">
-      <section class="user_info">
-        <h1>
-          <%= gravatar_for @user %>
-          <%= @user.name %>
-        </h1>
-      </section>
-    </aside>
+  <aside class="col-md-4">
+    <section class="user_info">
+      <h1>
+        <%= gravatar_for @user %>
+        <%= @user.name %>
+      </h1>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <% if @user.micro_posts.any? %>
+      <h3><%= t "microposts.title" %> (<%= @micro_posts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @micro_posts %>
+      </ol>
+    <% end %>
+    <%= paginate @micro_posts, theme: "twitter-bootstrap-3" %>
+  </div>
 </div>
